Closed Bug 1507068 Opened 7 years ago Closed 7 years ago

Crash in mozilla::layers::CompositorBridgeParent::GetAndroidDynamicToolbarAnimator

Categories

(Core :: Graphics: Layers, defect, P1)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
geckoview62 --- wontfix
geckoview64 --- fixed
firefox-esr60 --- unaffected
firefox63 --- wontfix
firefox64 --- fixed
firefox65 --- fixed

People

(Reporter: cpeterson, Assigned: rbarker)

References

Details

(Keywords: crash, Whiteboard: [geckoview:p1])

Crash Data

Attachments

(1 file)

Kats, this GetAndroidDynamicToolbarAnimator crash was a regression in 62. Might any of your Android WebRender changes have introduced this crash in 62? Over the last 12 months, there are only crash reports from Fennec 62-64 and now GV 64 in Focus Nightly. The crash volume is fairly low. There have been only 320 crashes from Fennec 62.0.x Release. https://crash-stats.mozilla.com/search/?signature=~GetAndroidDynamicToolbarAnimator&date=%3E%3D2018-05-14T00%3A50%3A32.000Z&date=%3C2018-11-13T23%3A50%3A32.000Z&_sort=-date&_facets=signature&_facets=cpu_arch&_facets=version&_facets=platform_pretty_version&_columns=date&_columns=signature&_columns=product&_columns=version&_columns=build_id&_columns=platform#facet-version ============================================================= This bug was filed from the Socorro interface and is report bp-ef983ee9-bb29-4f5f-bc4a-ee91f0181113. ============================================================= Top 10 frames of crashing thread: 0 libxul.so mozilla::layers::CompositorBridgeParent::GetAndroidDynamicToolbarAnimator mfbt/RefPtr.h:331 1 libxul.so mozilla::layers::UiCompositorControllerParent::Initialize gfx/layers/ipc/UiCompositorControllerParent.cpp:304 2 libxul.so mozilla::detail::RunnableMethodImpl<FdWatcher*, void xpcom/threads/nsThreadUtils.h:1197 3 libxul.so MessageLoop::RunTask ipc/chromium/src/base/message_loop.cc:451 4 libxul.so MessageLoop::DeferOrRunPendingTask ipc/chromium/src/base/message_loop.cc:459 5 libxul.so MessageLoop::DoWork ipc/chromium/src/base/message_loop.cc:534 6 libxul.so base::MessagePumpDefault::Run ipc/chromium/src/base/message_pump_default.cc:38 7 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:325 8 libxul.so base::Thread::ThreadMain ipc/chromium/src/base/thread.cc:198 9 libxul.so ThreadFunc ipc/chromium/src/base/platform_thread_posix.cc:40 =============================================================
Flags: needinfo?(kats)
No, the webrender changes are not in 62, so this crash predates my changes.
Flags: needinfo?(kats)
Jamie might have ideas.
Flags: needinfo?(jnicol)
Speculative fix for Bug 1507068. Checks if mParent is not null before trying to get a pointer to the toolbar animator
Assigning to Randall because he has a speculative fix. We will want to uplift to GV 64 Beta because this crash is affecting GV 64 in Focus 8.0.
Assignee: nobody → rbarker
Priority: -- → P1
Pushed by rbarker@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/599db31d5965 Ensure mParent is not null in mozilla::layers::CompositorBridgeParent::GetAndroidDynamicToolbarAnimator r=snorp,kats
Randall, we should try to uplift your fix to GV 64 Beta before EOD Monday October 19. This crash is the top crash for Focus 8.0 Nightly users using GV 64. Focus 8.0 Beta will start on rolling out GV 64 to more users on Tuesday, so they will be exposed to this crash.
Flags: needinfo?(rbarker)
Whiteboard: [geckoview] → [geckoview:p1]
Comment on attachment 9025199 [details] Bug 1507068 - Ensure mParent is not null in mozilla::layers::CompositorBridgeParent::GetAndroidDynamicToolbarAnimator [Beta/Release Uplift Approval Request] Feature/Bug causing the regression: Dynamic Toolbar User impact if declined: It seems this is the top crasher for Fx Focus Is this code covered by automated tests?: No Has the fix been verified in Nightly?: No Needs manual test from QE?: No If yes, steps to reproduce: List of other uplifts needed: None Risk to taking this patch: Low Why is the change risky/not risky? (and alternatives if risky): It only adds a check for a null pointer. String changes made/needed: none
Flags: needinfo?(rbarker)
Attachment #9025199 - Flags: approval-mozilla-beta?
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment on attachment 9025199 [details] Bug 1507068 - Ensure mParent is not null in mozilla::layers::CompositorBridgeParent::GetAndroidDynamicToolbarAnimator tentative compositor crash fix for fennec / focus, approved for 64.0b11
Flags: needinfo?(jnicol)
Attachment #9025199 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify-
status-geckoview64=fixed
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: