Bug 1507068 - Ensure mParent is not null in mozilla::layers::CompositorBridgeParent::GetAndroidDynamicToolbarAnimator. r=snorp,kats, a=jcristau

Speculative fix for Bug 1507068. Checks if mParent is not null before trying to get a pointer to the toolbar animator

Differential Revision: https://phabricator.services.mozilla.com/D11957